prusti-tests/tests/verify_overflow/ui/unsupported_cast.stderr
error: [Prusti: unsupported feature] unsupported cast from type 'f32' to type 'i32'
 --> $DIR/unsupported_cast.rs:3:12
  |
3 | #[requires(a as f32 as i32 == 0)]
  |            ^^^^^^^^^^^^^^^

error: aborting due to previous error

